lagt in favicon, bakgrundsmönster, fixat interface & service samt gjort anrop för meny + bindning, lagt till css styling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 
 <header class="hero-container">
-    <div id="hero-img" [ngStyle]="{'background-image': 'url(' + cafeImg  + ')'}">
+    
+    <div class="hero-img" [ngStyle]="{'background-image': 'url(' + cafeImg  + ')'}">
         <div class="img-color"></div>
     </div>
     <div class="top-header">
