--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: fit-content;
     padding: 1rem;
-    box-shadow: 0px 2px 4px 0px rgba(30, 30, 30, 0.6);
+
     z-index: 16;
 }
 
@@ -43,15 +43,17 @@
 
 /*Hero bild*/
 
-#hero-img {
+.hero-img {
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     width: 100%;
-    filter: blur(2px);
     transform: scale(1.02);
+    animation: fadeIn 0.5s 1s forwards ease-in;
+    filter: grayscale(1) blur(2px);
+    background-attachment: fixed;
 }
 
 .img-color::before {
@@ -77,6 +79,8 @@
     z-index: 2;
     width: 100%;
     padding: 2rem;
+    animation: anim-lineUp 3s forwards;
+    opacity: 0;
 }
 
 .hero-text a {
@@ -87,3 +91,28 @@
     text-shadow: 0px 2.5px rgba(30, 30, 30, 0.8);
 }
 
+@keyframes anim-lineUp {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, -50%) translateY(100%);
+    }
+    20% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+      transform: translate(-50%, -50%) translateY(0%);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%, -50%) translateY(0%);
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+        filter: grayscale(1) blur(2px);
+    } to {
+        filter: grayscale(0) blur(2px);
+    }
+  }
