--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: fit-content;
     color: white;
-    padding: 2rem;
+    padding: 6rem 2rem;
     z-index: 10;
 }
 
@@ -18,7 +18,7 @@
 
 .intro-title {
     text-align: center;
-    font-size: 4rem;
+    font-size: 4.2rem;
     font-weight: 400;
     margin-bottom: 4rem;
     font-family: "Libre Bodoni", serif;
