--- a/src/app/photo-gallery/photo-gallery.component.css
+++ b/src/app/photo-gallery/photo-gallery.component.css
@@ -4,8 +4,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 80rem;
-    z-index: 1;
+    height: fit-content;
+    z-index: 10;
 }
 
 
@@ -16,6 +16,11 @@
     width: 100%;
 }
 
+.gallery-wrap {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
 figure {
     border: 0.5rem solid white;
 }
@@ -23,13 +28,14 @@ figure {
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     max-width: 80rem;
     width: 100%;
     height: 60rem;
     margin: 0 auto;
-    padding-top: 6rem;
     gap: 0;
+    border: 0.5rem solid white;
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
 }
 
 .gallery-img {
