--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 
 html {
     font-size: 62.5%;
+    height: 100%;
 }
 
 body {
@@ -16,6 +17,7 @@ body {
     width: 100%;
     margin: 0 auto;
     overflow-x: hidden;
+    height: 100%;
 }
 
 h1,
@@ -25,8 +27,12 @@ h3 {
 }
 
 h3 {
-    font-size: 2.4rem;
+    font-size: 3.2rem;
     margin-bottom: 0.5rem;
+}
+
+h4 {
+    font-size: 2.4rem;
 }
 
 p {
@@ -39,3 +45,5 @@ button {
     padding: 0.5rem;
     font-family: "Libre Bodoni", serif;
 }
+
+
