css styling, importerat fontawesome ikoner, skapat element i html, skapat nya components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="admin-login"><a href=""><fa-icon [icon]="faUserIcon" id="user-icon"></fa-icon>Admin</a></div>
     </div>
     <div class="hero-text">
-        <h1><a routerLink="/">Café Lugnet</a></h1>
+        <h1 id="intro"><a routerLink="/">Café Lugnet</a></h1>
     </div>
 
     <app-navbar />
