--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,17 +11,23 @@
             <h4>{{menuData.title}}</h4>
             <p>{{menuData.Category}}</p>
             <p>{{menuData.description}}</p>
-            <p>{{menuData.allergy}}</p>
-            <p>{{menuData.price}}</p>
+            <p class="menu-allergy">{{menuData.allergy}}</p>
+            <p class="menu-price">{{menuData.price}}kr</p>
         </article>
 
         <article>
             <h3>Fika</h3>
             <p>Vi har allt från frallar till fikabröd och bakverk.</p>
             <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
-    
+
         </article>
     </section>
-
- 
 </div>
+
+<app-about />
+
+<app-location />
+
+<app-contact />
+
+<app-booking />
