--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 
     <nav>
         <ul>
-            <li>Startsida</li>
+            <li><a href="#intro">Startsida</a></li>
             <li>Meny</li>
             <li>Om oss</li>
-            <li>Boka bord</li>
+            <li><a href="#bokabord">Boka bord</a></li>
         </ul>
     </nav>
