--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -91,6 +91,10 @@
     text-shadow: 0px 2.5px rgba(30, 30, 30, 0.8);
 }
 
+fa-icon {
+    color: #ffffff;
+}
+
 @keyframes anim-lineUp {
     0% {
       opacity: 0;
