--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .menu-wrap {
     background-color: #F9EAD7;
-    height: 100rem;
+    min-height: 620px;
     z-index: 4;
     box-shadow: inset 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
 }
@@ -14,6 +14,14 @@
     margin: 0rem auto;
     top: 6rem;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+}
+
+.menu-price {
+    font-weight: bolder;
+}
+
+.menu-allergy {
+    font-style: oblique;
 }
 
 h4 {
