--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 html {
     font-size: 62.5%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -46,4 +47,6 @@ button {
     font-family: "Libre Bodoni", serif;
 }
 
-
+fa-icon {
+    color: #1e1e1e;
+}
