--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,8 @@
     <nav>
         <ul>
             <li><a href="#intro">Startsida</a></li>
-            <li>Meny</li>
-            <li>Om oss</li>
+            <li><a href="#lunchmeny">Meny</a></li>
+            <li><a href="#om">Om oss</a></li>
             <li><a href="#bokabord">Boka bord</a></li>
         </ul>
     </nav>
