--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -13,7 +13,7 @@
                         <h3>Boka bord</h3>
                         <p>Vi serverar lunch</p>
                         <p>Boka gärna lunch bord i förväg för platsgaranti</p>
-                        <button id="btn-gallery-book">Boka bord</button>
+                        <button id="btn-gallery-book"><a href="#bokabord" class="a-link">Boka bord</a></button>
                     </div>
                 </div>
             </figure>
@@ -24,7 +24,7 @@
                         <p>{{timeWeekday}}</p>
                         <p>{{timeWeekend}}</p>
                         <p>{{timeLunch}}</p>
-                        <button id="btn-gallery-time">Lunch Meny</button>
+                        <button id="btn-gallery-time"><a href="#lunchmenu" class="a-link">Meny</a></button>
                     </div>
                 </div>
             </figure>
