--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,7 @@
 section {
     width: 100%;
     background-color: #C5D4C7;
+    box-shadow: inset 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
 }
 
 .about-wrap {
