--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="om">
     <div class="about-wrap">
         <h3>Om oss</h3>
         <p>Café Lugnet öppnades 2024 mitt i hjärtat av staden, Malmö. Vi strävar efter att servera mat med lokala och ekologiska råvaror. Vi serverar allt från fika, varma & kalla dryck till lunch. </p>
