--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,11 @@
     </div>
     <div class="top-header">
         <div class="logo"><img [src]="cafeLogo" alt="Logotyp"></div>
-        <div class="admin-login"><a href=""><fa-icon [icon]="faUserIcon" id="user-icon"></fa-icon>Admin</a></div>
+        <div class="admin-login"><a routerLink="login"><fa-icon [icon]="faUserIcon" id="user-icon"></fa-icon>Admin</a></div>
     </div>
     <div class="hero-text">
         <h1 id="intro"><a routerLink="/">Café Lugnet</a></h1>
     </div>
 
-    <app-navbar />
 </header>
+
