--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,15 @@
-<app-header />
+
+<app-navbar />
 <app-intro />
 <app-photo-gallery />
 
-<div class="menu-wrap" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+<div class="menu-wrap" id="lunchmeny" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
     <section class="menu">
         <h3>Lunch Meny</h3>
         <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
         <article *ngFor="let menuData of dishes">
-            <h4>{{menuData.title}}</h4>
+            <h5>{{menuData.title}}</h5>
             <p>{{menuData.Category}}</p>
             <p>{{menuData.description}}</p>
             <p class="menu-allergy">{{menuData.allergy}}</p>
@@ -16,7 +17,7 @@
         </article>
 
         <article>
-            <h3>Fika</h3>
+            <h4>Fika</h4>
             <p>Vi har allt från frallar till fikabröd och bakverk.</p>
             <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
 
