--- a/src/styles.css
+++ b/src/styles.css
@@ -19,12 +19,16 @@ body {
     margin: 0 auto;
     overflow-x: hidden;
     height: 100%;
+
 }
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
     font-family: "Libre Bodoni", serif;
+
 }
 
 h3 {
@@ -33,6 +37,10 @@ h3 {
 }
 
 h4 {
+    font-size: 2.8rem;
+}
+
+h5 {
     font-size: 2.4rem;
 }
 
@@ -43,10 +51,14 @@ p {
 button {
     margin-top: 1rem;
     font-size: 2rem;
-    padding: 0.5rem;
     font-family: "Libre Bodoni", serif;
 }
 
 fa-icon {
+    color: #1e1e1e;
+}
+
+a {
+    text-decoration: none;
     color: #1e1e1e;
 }
