--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -14,3 +14,16 @@ h2 {
     text-align: center;
 }
 
+/*button*/
+#btn-login{
+    background-color: #d43838;
+   border: none;
+    box-shadow: 0px 2px 2px 0px rgba(30, 30, 30, 0.2);
+    width: 100%;
+    max-width: 200px;
+}
+
+#btn-login:hover {
+    cursor: pointer;
+}
+
