Sparat inloggningstoken, importerat guard

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,7 @@
 </div>
 
 <form>
+    <div>{{errorMessage}}</div>
     <label for="username">Användarnamn:</label>
     <input type="text" id="username" [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
     <label for="password">Lösenord:</label>
