--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -48,8 +48,8 @@ textarea {
 }
 
 input, select, textarea {
-    border: none;
-    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    border: 1.5px solid rgb(30, 30, 30, 0.2);
+    box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.2);
     margin-top: 0.5rem;
 
 }
