lagt till admin components, admin navbar & admin routes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
 <app-intro />
 <app-photo-gallery />
 
-<div class="menu-wrap" id="lunchmeny" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
-    <section class="menu">
+<div class="menu-wrap" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+    <section class="menu" id="lunchmenu">
         <h3>Lunch Meny</h3>
         <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
