--- a/src/app/admin-menu/admin-menu.component.html
+++ b/src/app/admin-menu/admin-menu.component.html
@@ -1,20 +1,21 @@
-<p>admin-menu works!</p>
-<section class="menu">
-    <h3>Lunch Meny</h3>
-    <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
+<section class="menu" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+    <div class="menu-admin-wrap">
+        <h3>Lunch Meny</h3>
+        <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
-    <article *ngFor="let menuData of dishes">
-        <h5>{{menuData.title}}</h5>
-        <p>{{menuData.Category}}</p>
-        <p>{{menuData.description}}</p>
-        <p class="menu-allergy">{{menuData.allergy}}</p>
-        <p class="menu-price">{{menuData.price}}kr</p>
-    </article>
+        <article *ngFor="let menuData of dishes">
+            <h5>{{menuData.title}}</h5>
+            <p>{{menuData.Category}}</p>
+            <p>{{menuData.description}}</p>
+            <p class="menu-allergy">{{menuData.allergy}}</p>
+            <p class="menu-price">{{menuData.price}}kr</p>
+        </article>
 
-    <article>
-        <h4>Fika</h4>
-        <p>Vi har allt från frallar till fikabröd och bakverk.</p>
-        <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
+        <article>
+            <h4>Fika</h4>
+            <p>Vi har allt från frallar till fikabröd och bakverk.</p>
+            <p>Vi erbjuder även kalla och varma dryck efter smak.</p>
 
-    </article>
+        </article>
+    </div>
 </section>
