--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -1,1 +1,15 @@
-<p>admin-header works!</p>
+
+<header class="hero-container">
+    
+    <div class="hero-img"></div>
+    <div class="top-header">
+        <div class="logo"><img [src]="cafeLogo" alt="Logotyp"></div>
+        <div class="admin-login"><a (click)="logout()"><fa-icon [icon]="faUserIcon" id="user-icon"></fa-icon>Logga ut</a></div>
+    </div>
+    <div class="hero-text">
+        <h1 id="intro"><a routerLink="/">Admin</a></h1>
+    </div>
+
+</header>
+
+
