--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a routerLink="/admin">Meny</a></li>
-        <li><a routerLink="/uppdatera">Lägg till/Uppdatera</a></li>
+        <li><a routerLink="/uppdatera">Lägg till / Redigera</a></li>
         <li><a routerLink="/bokningar">Hantera Bokningar</a></li>
     </ul>
 </nav>
