--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -87,7 +87,7 @@
     color: white;
     text-decoration: none;
     font-family: "Libre Bodoni", serif;
-    text-shadow: 0px 2.5px rgba(30, 30, 30, 0.8);
+    text-shadow: 2.5px 2.5px 2.5px rgba(30, 30, 30, 0.8);
 }
 
 fa-icon {
