--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,9 @@
 /*Ikon för inloggning*/
-#userIcon {
+.logo-login {
     display: block;
     width: 100%;
-    font-size: 10rem;
-    text-align: center;
+    max-width: 10rem;
+    margin: 0 auto;
 }
 
 .user-mini-icon, .left-arrow {
@@ -14,9 +14,9 @@
 /*form wrapper*/
 
 .login-form-wrap {
-    padding-top: 10rem;
+    padding-top: 5rem;
     background-color: #F9EAD7;
-    min-height: 900px;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
