--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
         <article *ngFor="let menuData of dishes">
             <h5>{{menuData.title}}</h5>
-            <p>{{menuData.Category}}</p>
+            <p>{{menuData.category}}</p>
             <p>{{menuData.description}}</p>
             <p class="menu-allergy">{{menuData.allergy}}</p>
             <p class="menu-price">{{menuData.price}}kr</p>
