--- a/src/app/admin-menu/admin-menu.component.css
+++ b/src/app/admin-menu/admin-menu.component.css
@@ -1,6 +1,5 @@
 .menu {
     padding: 2rem;
-    box-shadow: inset 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
     background-color: #F9EAD7;
 }
 
@@ -10,4 +9,34 @@
     margin: 0 auto;
     background-color: white;
     padding: 2rem;
+    top: 10rem;
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+}
+
+
+.menu-price {
+    font-weight: bolder;
+}
+
+.menu-allergy {
+    font-style: oblique;
+}
+
+h4 {
+    font-size: 2.8rem;
+    font-family: "Libre Bodoni", serif;
+    margin-top: 4rem;
+}
+
+h5 {
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+article {
+    margin-bottom: 4rem;
 }
