--- a/src/app/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-navbar/admin-navbar.component.css
@@ -4,7 +4,7 @@ nav {
     padding: 1rem 2rem;
     max-width: 100%;
     width: 100%;
-
+    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
     z-index: 15;
     position: sticky;
     border-top: 1rem solid white;
