--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -83,3 +83,14 @@ span.booking-error {
     font-size: 1.8rem;
     font-style: italic;
 }
+
+/*bokningsbekräftelse*/
+ .booking-confirm ul{
+    list-style: none;
+    font-size: 1.8rem;
+    padding: 2rem;
+    text-align: center;
+    background-color: #C5D4C7;
+    margin-top: 2rem;
+    box-shadow: 0px 2px 4px 0px rgb(30, 30, 30, 0.4);
+ }
