--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -30,6 +30,11 @@ h4 {
     margin-top: 4rem;
 }
 
+h5 {
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+}
+
 p {
     margin-bottom: 1rem;
 }
@@ -38,6 +43,3 @@ article {
     margin-bottom: 4rem;
 }
 
-app-photo-gallery {
-    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
-}
