Lagt till css styling, fixat små fel i admin sida, sorterat bokningar efter datum

--- a/src/app/admin-bookings/admin-bookings.component.html
+++ b/src/app/admin-bookings/admin-bookings.component.html
@@ -41,7 +41,7 @@
 
             <div class="btn-bookings-admin">
                 <button>Ta bort</button>
-                <button>Redigera</button>
+                <button (click)="updateBooking()">Redigera</button>
             </div>
         </div>
     </div>
