--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -76,7 +76,7 @@
             }
 
 
-            <button class="btn-book-table"><fa-icon [icon]="faCircleCheckIcon" id="check-icon"></fa-icon>Boka bord</button>
+            <button class="btn-book-table" type="submit"><fa-icon [icon]="faCircleCheckIcon" id="check-icon"></fa-icon>Boka bord</button>
 
             @if(bookingSuccessMessage != "") {
 
