--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,7 +10,7 @@
 
             <ul>
                 <li>040-1234567</li>
-                <li>cafelugnet&copy;.com</li>
+                <li>cafelugnet&commat;malmo.com</li>
                 <li>Södra Förstadsgatan 19A, Malmö</li>
             </ul>
         </div>
