--- a/src/app/photo-gallery/photo-gallery.component.html
+++ b/src/app/photo-gallery/photo-gallery.component.html
@@ -24,7 +24,7 @@
                         <p>{{timeWeekday}}</p>
                         <p>{{timeWeekend}}</p>
                         <p>{{timeLunch}}</p>
-                        <button id="btn-gallery-time"><a href="#lunchmenu" class="a-link">Meny</a></button>
+                        <button id="btn-gallery-time"><a href="#lunchmeny" class="a-link">Meny</a></button>
                     </div>
                 </div>
             </figure>
