--- a/src/app/admin-menu/admin-menu.component.css
+++ b/src/app/admin-menu/admin-menu.component.css
@@ -1,7 +1,4 @@
-.menu {
-    padding: 2rem;
-    background-color: #F9EAD7;
-}
+
 
 .menu-admin-wrap {
     max-width: 800px;
@@ -9,8 +6,9 @@
     margin: 0 auto;
     background-color: white;
     padding: 2rem;
-    top: 10rem;
     box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 
@@ -40,3 +38,4 @@ p {
 article {
     margin-bottom: 4rem;
 }
+
