--- a/src/app/admin-menu/admin-menu.component.html
+++ b/src/app/admin-menu/admin-menu.component.html
@@ -1,4 +1,4 @@
-<section class="menu" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+<section class="menu">
     <div class="menu-admin-wrap">
         <h3>Lunch Meny</h3>
         <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
