--- a/src/app/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-navbar/admin-navbar.component.css
@@ -50,3 +50,7 @@ nav ul li::after {
 nav ul li:hover::after, nav ul li:focus::after {
     opacity: 1;
 }
+
+.activeLink {
+    border-bottom: 2px solid #1e1e1e;
+}
