--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 /*top-header*/
 .top-header {
     background-color: rgb(28, 48, 33, 0.6);
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     height: fit-content;
