--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <app-photo-gallery />
 
 <div class="menu-wrap" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
-    <section class="menu" id="lunchmenu">
+    <section class="menu" id="lunchmeny">
         <h3>Lunch Meny</h3>
         <p>Lunch serveras mellan kl 11.00-14.00 varje dag, kaffe efter maten ingår</p>
 
