--- a/src/app/admin-update/admin-update.component.html
+++ b/src/app/admin-update/admin-update.component.html
@@ -1,1 +1,57 @@
-<p>admin-update works!</p>
+<div class="admin-main" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+    <app-admin-header />
+    <app-admin-navbar />
+
+    <section id="bokabord">
+        <div class="book-form-wrap">
+            <form [formGroup]="menuForm" (ngSubmit)="addMenu()">
+                <h3>Lägg till maträtt</h3>
+    
+                <div class="dish-title">
+                    <label for="title">Titel:</label>
+                    <span class="menu-error" *ngIf="menuForm.controls['title'].invalid && menuForm.controls['title'].touched">Titeln måste vara minst 3 bokstäver</span>
+                    <input type="text" name="title" id="title" placeholder="Ange titel på maträtt" formControlName="title">
+                </div>
+    
+                <div class="dish-category">
+                    <label for="category">Kategory:</label>
+                    <span class="menu-error" *ngIf="menuForm.controls['category'].invalid && menuForm.controls['category'].touched">Välj alternativ</span>
+                    <select name="category" id="category" formControlName="category">
+                        <option value="Brunch">Brunch</option>
+                        <option value="Lunch">Fisk</option>
+                        <option value="Skaldjur">Skaldjur</option>
+                        <option value="Vegetarisk">Vegetarisk</option>
+                        <option value="Lakto-ovo-vegetarisk">Lakto-ovo-vegetarisk</option>
+                    </select>
+                </div>
+
+                <div class="dish-description">
+                    <label for="description">Beskrivning:</label>
+                    <span class="menu-error" *ngIf="menuForm.controls['description'].invalid && menuForm.controls['description'].touched">Maträtten måste ha en beskrivning</span>
+                    <textarea type="text" name="description" id="description" placeholder="Ange beskrivning av maträtt" formControlName="description"></textarea>
+                </div>
+
+                <div class="dish-allergy">
+                    <label for="allergy">Allergifri/intolerans:</label>
+                    <input type="text" name="allergy" id="allergy" placeholder="Exempelvis Laktosfri, Glutenfri, fri från nötter osv" formControlName="allergy">
+                </div>
+                <div class="dish-price">
+                    <label for="price">Pris:</label>
+                    <span class="menu-error" *ngIf="menuForm.controls['price'].invalid && menuForm.controls['description'].touched">Ange pris för maträtten</span>
+                    <input type="number" name="price" id="price" placeholder="Pris på maträtt" formControlName="price">
+                </div>
+    
+    
+                @if(errorMessageMenuForm != "") {
+                <p class="error-form-message">{{errorMessageMenuForm}}</p>
+                }
+    
+                <button class="btn-add-dish" type="submit"><fa-icon [icon]="faCircleCheckIcon" id="check-icon"></fa-icon>Lägg till</button>
+    
+    
+            </form>
+        </div>
+    </section>
+
+    <app-admin-btn-logout/>
+</div>
