--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,30 +1,8 @@
-/*Btn-logout*/
-#btn-logout {
-    width: 100%;
-    max-width: 80rem;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    background-color: #1e1e1e;
-    color: white;
-    border: none;
-    box-shadow: 0px 2px 2px 0px rgb(30, 30, 30, 0.4);
-    width: 100%;
-    padding: 1rem;
-    align-items: center;
-}
-
-#btn-logout:hover {
-    background-color: #F6A566;
-    color: #1e1e1e;
-}
 
 .admin-main {
     background-color: #F9EAD7;
     padding-bottom: 2rem;
-}
-
-.logout-icon {
-    color: white;
-    margin-left: 0.5rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
