--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,8 @@
-<div class="admin-main"  [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
+<div class="admin-main" [ngStyle]="{'background-image': 'url(' + linesPatternImg  + ')'}">
     <app-admin-header />
     <app-admin-navbar />
-    <app-admin-menu />
 
-    <button id="btn-logout" (click)="logout()">Logga ut <fa-icon [icon]="faArrowRightToBracketIcon" class="logout-icon"></fa-icon></button>
+    <app-menu/>
+
+    <app-admin-btn-logout/>
 </div>
